Fix StaticResourceController to handle static files properly